# gdw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  make.bat
gdw/: __init__.py  gdw.py
gdw/tests/: test_gdw.py
src/gdw/: gdw.py
tests/: test_gdw.py
